pkg/synthesis/tests_expected_output/k8s_resources/ExampleTwoDeniesSimple_K8SNoHint/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: All Connections from (group = Slytherin) to (group != Dumbledore1 and group != Dumbledore2)
        nsx-id: "3"
    creationTimestamp: null
    name: policy_0
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__Dumbledore1
                      operator: DoesNotExist
                    - key: group__Dumbledore2
                      operator: DoesNotExist
    podSelector:
        matchExpressions:
            - key: group__Slytherin
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: All Connections from (group = Slytherin) to (group != Dumbledore1 and group != Dumbledore2)
        nsx-id: "3"
    creationTimestamp: null
    name: policy_1
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__Slytherin
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Dumbledore1
              operator: DoesNotExist
            - key: group__Dumbledore2
              operator: DoesNotExist
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: All Connections from (group = Gryffindor) to (group != Dumbledore1 and group != Dumbledore2)
        nsx-id: "4"
    creationTimestamp: null
    name: policy_2
spec:
    egress:
        - to:
            - podSelector:
                matchExpressions:
                    - key: group__Dumbledore1
                      operator: DoesNotExist
                    - key: group__Dumbledore2
                      operator: DoesNotExist
    podSelector:
        matchExpressions:
            - key: group__Gryffindor
              operator: Exists
    policyTypes:
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: All Connections from (group = Gryffindor) to (group != Dumbledore1 and group != Dumbledore2)
        nsx-id: "4"
    creationTimestamp: null
    name: policy_3
spec:
    ingress:
        - from:
            - podSelector:
                matchExpressions:
                    - key: group__Gryffindor
                      operator: Exists
    podSelector:
        matchExpressions:
            - key: group__Dumbledore1
              operator: DoesNotExist
            - key: group__Dumbledore2
              operator: DoesNotExist
    policyTypes:
        - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    annotations:
        description: Default Deny Network Policy
        nsx-id: noNsxID
    creationTimestamp: null
    name: defaultDeny
spec:
    podSelector: {}
    policyTypes:
        - Ingress
        - Egress
